<resources>
    <string name="app_name">sKlub</string>
    <string name="btn_first">first</string>
    <string name="btn_log_in">Log In</string>
    <string name="testEmail">stefan@mail.com</string>
    <string name="testPassword">123456</string>
    <string name="btn_sign_out">Sign Out</string>
    <string name="tv_login">Login</string>
    <string name="btn_upload_img">Upload image</string>
    <string name="btn_add_event">Add event</string>
    <string name="btn_register">Register</string>
    <string name="hint_event_name">Name</string>
    <string name="hint_sport_type">Type of sport activity</string>
    <string name="hint_event_description">Description</string>
    <string name="hint_email">Email</string>
    <string name="stub_email">natasa@mail.com</string>
    <string name="stub_firstname">Nataša</string>
    <string name="stub_lastname">Zvekić</string>
    <string name="hint_lastname">Lastname</string>
    <string name="hint_firstname">Firstname</string>
    <string name="hint_birthday">Birthday</string>
    <string name="hint_password">Password</string>
    <string name="hint_repeat_password">Repeat password</string>
    <string name="hint_place_name">Name</string>
    <string name="placeholder_event_name">Event name</string>
    <string name="hint_time">Time</string>
    <string name="hint_date">Date</string>
    <string name="menu_action_edit">Edit</string>
    <string name="user_profile_attended_events_tab">Attended events</string>
    <string name="user_profile_my_events_tab">My events</string>
    <string name="content_description_user_profile_image">User profile image</string>
    <string name="menu_action_my_profile">My profile</string>
    <string name="menu_action_settings">Settings</string>
    <string name="hint_event_date_and_time">Date and time</string>
    <string name="menu_action_sign_out">Sign out</string>
    <string name="content_description_sklub_logo">sKlub logo</string>
    <string name="action_bar_add_new_event">Add new event</string>
    <string name="menu_action_add_place">Add new place</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="placeholder_event_sport_name">Sport name</string>
    <string name="menu_action_report">Report</string>
    <string name="menu_action_delete">Delete</string>
    <string name="hint_edit_old_password">Current password</string>
    <string name="hint_edit_new_password">New password</string>
    <string name="hint_edit_repeat_new_password">Repeat new password</string>
    <string name="placeholder_gender_and_age">Male, 22</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="title_activity_comments_acitivity">CommentsAcitivity</string>
    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->
    <string name="hello_world">Hello Square World!</string>
    <string name="title_activity_comments">CommentsActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="placeholder_comment">Comment text goes here</string>
    <string name="hint_new_comment">New comment...</string>
    <string name="content_description_event_image">Event image</string>
</resources>
