<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/menu_action_my_profile"
        android:icon="@drawable/ic_person_white_36dp"
        android:title="@string/menu_action_my_profile"
        app:showAsAction="ifRoom" />

    <item android:id="@+id/menu_action_add_place"
        android:title="@string/menu_action_add_place"
        app:showAsAction="never"/>

    <item android:id="@+id/menu_action_settings"
        android:icon="@drawable/ic_settings_black_18dp"
        android:title="@string/menu_action_settings"
        app:showAsAction="never"/>

    <item android:id="@+id/menu_action_sign_out"
        android:title="@string/menu_action_sign_out"
        app:showAsAction="never"/>

</menu>