<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraintLayout4"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginVertical="4dp"
    android:layout_marginBottom="4dp">

    <TextView
        android:id="@+id/tv_firstname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:fontFamily="@font/poppins_regular"
        android:maxLines="1"
        android:text="@string/hint_firstname"
        android:textSize="12sp"
        android:textStyle="italic"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_lastname"
        style="@style/Base.Widget.MaterialComponents.TextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_regular"
        android:maxLines="1"
        android:text="@string/hint_lastname"
        android:textSize="12sp"
        android:textStyle="italic"
        app:layout_constraintStart_toEndOf="@id/tv_firstname"
        app:layout_constraintTop_toTopOf="@+id/tv_firstname" />

    <TextView
        android:id="@+id/tv_datetime"
        style="@style/Base.Widget.MaterialComponents.TextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:fontFamily="@font/poppins_regular"
        android:maxLines="1"
        android:text="@string/hint_event_date_and_time"
        android:textSize="12sp"
        android:textStyle="italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tv_lastname" />

    <TextView
        android:id="@+id/tv_text"
        style="@style/Base.Widget.MaterialComponents.TextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/poppins_regular"
        android:text="@string/placeholder_comment"
        android:textColor="#535353"
        android:textSize="14sp"
        android:lineHeight="12sp"
        app:layout_constraintEnd_toEndOf="@+id/tv_datetime"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/tv_firstname"
        app:layout_constraintTop_toTopOf="@id/tv_firstname" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:background="#F3F3F3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_text">

    </View>

</androidx.constraintlayout.widget.ConstraintLayout>