<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.MainActivity">

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="8dp"
        app:layout_constraintBottom_toTopOf="@+id/btnUpload"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerview_event"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </ScrollView>

    <Button
        android:id="@+id/btnAddEvent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="onBtnAddEvent"
        android:text="@string/btn_add_event"
        app:layout_constraintEnd_toStartOf="@+id/btnUpload"
        app:layout_constraintTop_toTopOf="@+id/btnUpload" />

    <Button
        android:id="@+id/btnUpload"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="onBtnUpload"
        android:text="@string/btn_upload_img"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btnSignOut"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="onBtnSignOutClick"
        android:text="@string/btn_sign_out"
        app:layout_constraintStart_toEndOf="@+id/btnUpload"
        app:layout_constraintTop_toTopOf="@+id/btnUpload" />

</androidx.constraintlayout.widget.ConstraintLayout>
